--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
+    "react-select": "^5.10.2",
+    "react-select-country-list": "^2.2.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
